# libbisca

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  Pipfile  README.md  TODO.md  do_profile.py  examples.py  main.py  notes.txt  pyproject.toml  setup.py  tox.ini
bisca/: __init__.py  agent.py  card.py  game.py  state.py
libbisca/: __init__.py  agent.py  agents.py  card.py  game.py  state.py
libbisca/agents/: __init__.py  agent.py  agents.py  dev.py
tests/integration/: test_game.py
tests/integration/test_agents/: test_agents.py  test_dev.py
tests/unit/: conftest.py  test_card.py  test_game.py  test_state.py
tests/unit/fixtures/: non_shuffled_default_0_init.json  non_shuffled_default_1_first_move.json  non_shuffled_default_2_second_move.json
tests/unit/fixtures/default_state/: 1_move.json
tests/unit/fixtures/standard_rules__3cards__non_shuffled/: 0_init.json  2_move.json  3_move.json  4_move.json  end.json
tests/unit/fixtures/state_two_players_standard_rules_three_cards/: default_non_shuffled_0_init.json  default_non_shuffled_1_first_move.json  default_non_shuffled_1st_move.json  default_non_shuffled_2_second_move.json  default_non_shuffled_2nd_move.json  default_non_shuffled_3rd_move.json  default_non_shuffled_4th_move.json
