[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "libbisca"
description-file = "README.md"
author = "Nuno Miguel Casteloa da Silva"
author-email = "NunoMCSilva@gmail.com"
home-page = "https://github.com/NunoMCSilva/libbisca"
classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        # Environment :: Console
        # Framework :: Hypothesis?
        "Intended Audience :: Developers",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: Implementation :: CPython",
        # Topic :: Games/Entertainment
        "Topic :: Software Development :: Libraries",
]
